--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,30 @@
 body{
   background:teal;
+  color: #fff;
 }
 .mm-app > .row{
-  overflow-x: visible;
+  overflow-x:visible;
   flex-wrap: nowrap;
+}
+.image-container{
+  position: relative;
+  transition: transform 0.2s;
+}
+.image-container:hover{
+  cursor:pointer;
+  transform:scale(1.1)
+}
+.overlay{
+  position: absolute;
+  background: rgba(0, 0, 0, 0.8);
+  width:100%;
+  transition: 0.5s ease;
+  opacity: 0;
+  margin:0 auto;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+.image-container:hover .overlay{
+  opacity:1;
 }
